solved mobile parallax text overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,7 @@ code {
 
 .journey {
   background-image: linear-gradient(to bottom, #ffa29c 2%, #1F007D, #080033);
-  height: 170vh;
+  height: 199vh;
   width: 100vw;
 
   background-position: center;
